--- a/comment.html
+++ b/comment.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href='./type.css'>
 </head>
 <body>
 <div style="width:100%;text-align:center">
-    <h1>Please Comment</h1>
+    <h1>Please Comment (testing)</h1>
     <form action="http://127.0.0.1:5000/add_successfully" method="post" enctype="multipart/form-data">
       <textarea name="message" rows="2" class="question" id="msg"
                 required autocomplete="off" style="height: 300px; width: 500px"></textarea><br>
